apps/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: media
  labels:
    app: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:latest
          ports:
            - containerPort: 8989
              name: http
          volumeMounts:
            - name: sonarr-config
              mountPath: /config
            - name: shows-storage
              mountPath: /shows
            - name: downloads-storage
              mountPath: /downloads
      volumes:
        - name: sonarr-config
          hostPath:
            path: /home/philip/jellyfin/sonarr_config_k8s
        - name: shows-storage
          hostPath:
            path: /home/philip/jellyfin/shows
        - name: downloads-storage
          hostPath:
            path: /home/philip/jellyfin/downloads
