apps/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: sonarr
  ports:
    - port: 8990
      targetPort: 8990
      name: http
